@@ -12,6 +12,7 @@ Game:
  + Hedgehog tag translucency is now changed with [Switch] + [Change hedgehog tags]
  * Fix time box being usable in Sudden Death with 0 health decrease
  * Fix chat input key being sometimes registered twice
+ * Fix not displaying current volume status after pressing mute key
 
 Frontend:
  + Schemes are now stored in separate files under Schemes
